--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_starter_user_service
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+
+server.port=8081
