CRUD MVC project with test classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_starter_user_
 spring.datasource.username=postgres
 spring.datasource.password=password
 
+spring.jpa.open-in-view=false
+
 
 server.port=8081
