--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
-##spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_starter_user_service
-#spring.datasource.username=test
-#spring.datasource.password=test
-#
-#spring.jpa.properties.hibernate.hbm2ddl.auto:update
-#
-#
+#spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_starter_user_service
+spring.datasource.username=test
+spring.datasource.password=test
+
+spring.jpa.properties.hibernate.hbm2ddl.auto:update
+
+
